js/js.translator/testData/incremental/invalidation/associatedObjectKey/lib1/Annotation1.0.kt
@file:OptIn(ExperimentalAssociatedObjects::class)

import kotlin.reflect.*

@AssociatedObjectKey
annotation class Annotation1(val kClass: KClass<out Any>)
